--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-e75b"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="234" data-image-height="133">
+        <a href="" class="u-image u-logo u-image-1" data-image-width="234" data-image-height="133">
           <img src="images/logo.jpeg" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
